fix: change color variables   -Changed foregrounds for better contrast

--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,7 @@
   --primary: 196.36 97.58% 48.63%;
   --primary-dark: 205.21 100% 33.14%;
   --primary-light: 196.17 100% 72.35%;
-  --primary-foreground: 0 0% 100%;
+  --primary-foreground: 0 0% 0%;
   --primary-foreground-dark: 0 0% 100%;
   --primary-foreground-light: 0 0% 0%;
 
@@ -29,10 +29,10 @@
   --secondary-foreground-dark: 0 0% 100%;
   --secondary-foreground-light: 0 0% 100%;
 
-  --accent: 19.77 77.19% 55.29%;
+  --accent: 22.77 98.19% 52.27%;
   --accent-dark: 18.68 72.29% 45.29%;
   --accent-light: 18.16 90.48% 67.06%;
-  --accent-foreground: 0 0% 100%;
+  --accent-foreground: 0 0% 0%;
   --accent-foreground-dark: 0 0% 100%;
   --accent-foreground-light: 0 0% 0%;
 
